--- a/typing-trainer-app/src/components/textField/styles.scss
+++ b/typing-trainer-app/src/components/textField/styles.scss
@@ -1,10 +1,9 @@
-.open {
-  animation: Open;
+.bird-animated {
+  animation-duration: 1.1s;
 }
 
-.open g .mouth {
-  animation: Open infinite 2s linear;
-
+.bird-animated g .mouth {
+  animation: Open 1s ease-in-out;
   transform-origin: center top;
 }
 
@@ -22,21 +21,9 @@
   }
 }
 
-.close {
-  animation: Open;
+.typingText{
+  padding-top: 20px;
+  font-size: 120px;
+  font-family: 'Bold';
 }
 
-.close g .mouth {
-  animation: Close 2s linear;
-  transform-origin: center top;
-}
-
-@keyframes Close {
-  0% {
-    transform: rotate(12deg);
-  }
-
-  100% {
-    transform: rotate(0deg);
-  }
-}
